fix bug 581330, unified folders broken after deleting account, r/sr=standard8