mailnews/base/src/nsMsgAccountManager.h
@@ -227,6 +227,8 @@ private:
   // handle virtual folders
   static nsresult GetVirtualFoldersFile(nsCOMPtr<nsILocalFile>& file);
   static nsresult WriteLineToOutputStream(const char *prefix, const char * line, nsIOutputStream *outputStream);
+  void     ParseAndVerifyVirtualFolderScope(nsCString &buffer,
+                                            nsIRDFService *rdf);
   nsresult AddVFListenersForVF(nsIMsgFolder *virtualFolder, 
                                const nsCString& srchFolderUris,
                                nsIRDFService *rdf,
