mail/test/mozmill/folder-tree-modes/test-smart-folders.js
@@ -216,6 +216,20 @@ function test_folder_flag_changes() {
   // changed it.
   archiveScope = "|" + smartArchiveFolder.msgDatabase.dBFolderInfo
                  .getCharProperty("searchFolderUri") + "|";
+
+  // figure out what we expect the archiveScope to now be.
+  let allDescendents = Cc["@mozilla.org/supports-array;1"]
+                         .createInstance(Ci.nsISupportsArray);
+  rootFolder = inboxFolder.server.rootFolder;
+  let localArchiveFolder = rootFolder.getChildNamed("Archives");
+  localArchiveFolder.ListDescendents(allDescendents);
+  let numFolders = allDescendents.Count();
+  desiredScope = "|" + localArchiveFolder.URI + "|";
+  for each (let f in fixIterator(allDescendents, Ci.nsIMsgFolder))
+    desiredScope += f.URI + "|";
+
+  if (archiveScope != desiredScope)
+    throw "archive scope wrong after removing folder";
   assert_folder_and_children_not_in_scope(archiveFolder, archiveScope);
 }
 
